creating endpoint that list playlist information
